- fix minor alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,7 @@
   }
 
   .appointments-container-primary .MuiFormControlLabel-root {
-    margin: 30px 0 0;
+    margin: 30px 0 0 -13px;
     justify-content: center;
   }
 
